# doppler-indexer-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yml  deploy-dev.yml  publish-image.yml
bench/: historical_benchmark.sh  live_benchmark.sh
config/: config.json  prometheus.yml
config/factory_collections/: base.json
config/tokens/: base.json
deploy/: .env.example  compose.example.yaml
deploy/dev/: compose.yaml  redeploy.sh
docker/: entrypoint.sh
docs/: BLOCK_COLLECTION.md  CONFIG.md  DECODING.md  ETH_CALL_COLLECTION.md  ETH_CALL_INDEXING.md  FACTORY_COLLECTION.md  LIVE_MODE.md  LOGS_COLLECTION.md  ON_EVENT_CALLS.md  OVERVIEW.md  PARALLELISM.md  RECEIPTS_COLLECTION.md  RPC.md  S3_STORAGE.md  TRANSFORMATIONS.md  TRANSFORMATION_UTILS.md  metrics_implementation_phases.md
docs/api_design/: design.md
docs/concurrent_handlers/: roadmap.md
docs/designs/: handler-dependency-chains.md
docs/features/: ETH_CALL_COLLECTION.md  LOGS_COLLECTION.md  ON_EVENT_CALLS.md  TRANSFORMATIONS.md  TRANSFORMATION_UTILS.md  block_collection.md  config.md  database.md  doppler_sol_handlers.md  eth_call_collection.md  factory_collection.md  leaderboard_snapshots.md  live_mode.md  logs_collection.md  metrics.md  on_event_calls.md  parallelism.md  quote_token_pricing.md  receipts_collection.md  rpc.md  s3_storage.md  solana_raw_data.md  transformation_utils.md  transformations.md
docs/pool-metrics/: metrics_implementation_phases.md  pool_metrics.md
docs/solana/: analysis.md  design.md  roadmap.md
docs/summaries/: march_23-30.md
migrations/: 000_handler_progress.sql  000_transformation_progress.sql  001_active_versions.sql  002_live_progress.sql  002_v3_pools.sql  003_handler_retry_backlog.sql  004_log_index_bigint.sql  005_solana_schema_normalization.sql  006_column_renames_and_swaps_constraint.sql  007_pool_leaderboard_snapshot.sql
migrations/tables/: call_revert_log.sql  cumulated_fees.sql  dhook_pool_configs.sql  evm_cl_positions.sql  liquidity_deltas.sql  pool_metrics.sql  pool_snapshots.sql  pool_snapshots_add_active_liquidity_usd.sql  pool_snapshots_add_tvl.sql  pool_snapshots_add_volume_usd.sql  pool_state.sql  pool_state_add_active_liquidity_usd.sql  pool_state_add_tvl.sql  pools.sql  pools_solana_nullable.sql  pools_token_indexes.sql  portfolios.sql  position.sql  prices.sql  skipped_addresses.sql  sol_cpmm_migrator.sql  sol_cpmm_positions.sql  sol_prediction_claims.sql  sol_prediction_entries.sql  sol_prediction_markets.sql  swaps.sql  swaps_solana_nullable.sql  token_metrics.sql  token_price_paths.sql  tokens.sql  users.sql  (+4 more)
src/: bench.rs  cli.rs  lib.rs  main.rs  runtime.rs
(+335 files in other folders)
