[package]
name = "doppler-indexer-rs"
version = "0.1.0"
edition = "2021"
default-run = "doppler-indexer-rs"
[features]
default = []
bench = []

[dependencies]
tikv-jemallocator = "0.6"
alloy-primitives = { version = "1.5.2", features = ["serde"] }
alloy = { version = "1.0", features = ["full", "provider-http", "rpc-types", "dyn-abi", "json-abi"] }
anyhow = "1.0.100"
dotenvy = "0.15"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
governor = "0.10"
nonzero_ext = "0.3"
rand = "0.9"
rayon = "1.10"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
bincode = "1.3"
paste = "1"
# Pinned to match the version alloy's transport layer already pulls in, so
# both paths share a single reqwest/hyper/rustls stack.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "gzip"] }

arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd"] }

# Database
bytes = "1"
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
rust_decimal = { version = "1.37", features = ["db-tokio-postgres"] }
bigdecimal = "0.4"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tokio-test = "0.4.5"
tempfile = "3.26.0"

# S3 Storage
object_store = { version = "0.11", features = ["aws"] }

# File locking
fs2 = "0.4"
